[package]
name = "signer"
version = "0.1.0"
authors = ["Alexandr Kozlenkov <sah4ez32@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.32"
rust-crypto = "^0.2"
rand = "0.4.0"
base64 = "0.10.1"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde_derive = "1.0.85"
serde = "1.0.85"
mongodb = "0.3.11"
hex = "0.3.2"

[[bin]]
name = "signer"
path = "src/main.rs"

[[bin]]
name = "pspk"
path = "src/pspk/main.rs"
